Location and Google maps feature implemented to allow the user to save locations of their appointments. Added some persistence with the editing of appointments.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ie.wit.appointments">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:name=".main.MainApp"
         android:allowBackup="true"
@@ -10,15 +13,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Appointments">
-        <activity android:name=".activities.AppointmentListActivity"
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value= "${MAPS_API_KEY}" />
+
+        <activity
+            android:name=".activities.MapActivity"
+            android:label="@string/title_activity_map" />
+        <activity
+            android:name=".activities.AppointmentListActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.AppointmentActivity">
-        </activity>
+        <activity android:name=".activities.AppointmentActivity"></activity>
     </application>
 
 </manifest>
